[gd_scene load_steps=82 format=2]

[ext_resource path="res://Assets/PlayersSprite/blindfold-crouchwalk.png" type="Texture" id=1]
[ext_resource path="res://Assets/PlayersSprite/blindfold-die.png" type="Texture" id=2]
[ext_resource path="res://Assets/PlayersSprite/normal-crouchwalk.png" type="Texture" id=3]
[ext_resource path="res://Assets/PlayersSprite/blindfold-idle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Scripts/PlayerMovement.gd" type="Script" id=5]
[ext_resource path="res://Assets/PlayersSprite/normal-hurt.png" type="Texture" id=6]
[ext_resource path="res://Assets/PlayersSprite/normal-idle.png" type="Texture" id=7]
[ext_resource path="res://Assets/PlayersSprite/normal-run.png" type="Texture" id=8]
[ext_resource path="res://Assets/PlayersSprite/blindfold-punch1.png" type="Texture" id=9]
[ext_resource path="res://Assets/PlayersSprite/normal-punch1.png" type="Texture" id=10]
[ext_resource path="res://Assets/PlayersSprite/blindfold-run.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sound Effects/Jump.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sound Effects/Flap_2.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/PlayersSprite/blindfold-hurt.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sound Effects/Morph.wav" type="AudioStream" id=41]
[ext_resource path="res://Assets/Sound Effects/Big_Crash.wav" type="AudioStream" id=48]
[ext_resource path="res://Assets/Sound Effects/Cracking.wav" type="AudioStream" id=49]
[ext_resource path="res://Assets/Sound Effects/Hurt.wav" type="AudioStream" id=50]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.7891, 54.6694 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.23666, 15.0106 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 9 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 9 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 9 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 9 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 9 )
region = Rect2( 300, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 10 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 10 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 10 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 10 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 10 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 14 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 14 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="SpriteFrames" id=61]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "run1",
"speed": 6.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "idle2",
"speed": 4.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "crouch2",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "run2",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "crouch1",
"speed": 4.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "attack1",
"speed": 6.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "attack2",
"speed": 7.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "hurt2",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "hurt1",
"speed": 3.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "idle1",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=62]
extents = Vector2( 19.2644, 26.1805 )

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 54, 90 )

[node name="Player" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="Crouch" type="CollisionShape2D" parent="Player"]
position = Vector2( 1.78387, 5.35147 )
shape = SubResource( 1 )
disabled = true

[node name="StandUp" type="CollisionShape2D" parent="Player"]
position = Vector2( -2.13354, -13.9283 )
scale = Vector2( 5, 5 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( -0.487915, -28.7462 )
scale = Vector2( 5.03398, 5 )
frames = SubResource( 61 )
animation = "idle1"
frame = 1
playing = true

[node name="AttackArea" type="Area2D" parent="Player"]

[node name="AttackCollision" type="CollisionShape2D" parent="Player/AttackArea"]
position = Vector2( 71.7017, -8.65154 )
shape = SubResource( 62 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 2.1189, -211.893 )
current = true

[node name="SoundJump" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 12 )
volume_db = -15.0

[node name="SoundAttack" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 13 )
volume_db = -15.0

[node name="SoundDead" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 48 )
volume_db = -15.0

[node name="SoundRage" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 41 )
volume_db = -15.0

[node name="SoundRageAtk" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 49 )
volume_db = -15.0

[node name="SoundGetHit" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 50 )
volume_db = -15.0

[node name="HitDetection" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/HitDetection"]
position = Vector2( -1, -9 )
shape = SubResource( 63 )

[connection signal="animation_finished" from="Player/AnimatedSprite" to="Player" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Player/AttackArea" to="Player" method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="Player/HitDetection" to="Player" method="_on_HitDetection_body_entered"]
